fix: certain portion hides on mobile

--- a/components/UploadFile/UploadFile.module.css
+++ b/components/UploadFile/UploadFile.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #00000080;
   --max-width: 30rem;
 }
